<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Contact lens assistant</string>
    <string name="_180" translatable="false">180</string>
    <string name="save" translatable="false">Save</string>
    <string name="_3_75" translatable="false">-3.75</string>
    <string name="_01_50" translatable="false">+3.50</string>
    <string name="_8_5" translatable="false">8.5</string>
    <string name="_9_0" translatable="false">9.0</string>
    <string name="_2_25" translatable="false">-2.25</string>
    <string name="_1_25" translatable="false">-1.25</string>
    <string name="url_more_apps" translatable="false"><![CDATA[https://play.google.com/store/apps/developer?id=%D0%9F%D0%B0%D0%B2%D0%B5%D0%BB+%D0%97%D1%83%D0%B1%D0%BA%D0%BE&hl=ru&gl=US]]></string>
    <string name="url_rate_app" translatable="false">https://play.google.com/store/apps/details?id=com.appsforlife.contactlensmanagement</string>
    <string name="url_privacy_policy" translatable="false">https://pages.flycricket.io/contact-lens-assista/privacy.html</string>
    <string name="content_description_mark">mark</string>
    <string name="marked_days">marked days: %s</string>
    <string name="menu_restart">Restart</string>
    <string name="menu_note">Note</string>
    <string name="menu_help">Help</string>
    <string name="toast_click_item">Swipe left or right for remove</string>
    <string name="remove">Remove</string>
    <string name="to_return">To return</string>
    <string name="dialog_start_over">Start over?</string>
    <string name="dialog_action_yes">Yes</string>
    <string name="useful_information">Useful information</string>
    <string name="info_material">Contact lens materials</string>
    <string name="info_material_description">\tHydrogel - lenses with a high moisture content. Due to their high water content, they are very comfortable to wear. Most often, the discomfort when wearing hydrogel contact lenses occurs in a room with low humidity or after a long time at the computer. One of the promising directions in the development of such materials is to impart biocompatible properties to them. Biocompatible materials include materials with low dehydration and resistance to protein and lipid deposits. The terms of wearing such contact lenses are from one day to a month. But they are only for daytime use - be sure to take them off at night. Recommended for people prone to allergic reactions, since the materials of hydrogel lenses are hypoallergenic;\n\tSilicone hydrogel - contact lenses, as the name implies, contain silicone and hydrogel. Silicone provides a very high oxygen transmission - Dk / t 100-160 units, which significantly reduces the risk of corneal hypoxia. The hydrogel component moisturizes the cornea for comfortable contact lens wear. There is less water in silicone hydrogel lenses than in hydrogel lenses, so the evaporation of liquid does not affect the lens so much, which allows you to wear contact lenses for a long time without feeling dryness and discomfort. This is why only silicone hydrogel lenses are recommended for continuous wear, including at night.
But since the moisture content of silicone hydrogel lenses is still lower than that of hydrogel lenses, special moisturizing agents are additionally introduced into the lens material to eliminate dryness of the eye, and special plasma methods for treating the lens surface are used.
Silicone hydrogel contact lenses are harder than hydrogel contact lenses due to the presence of silicone. Therefore, they are more convenient to use. This is especially important for those wearers who have difficulty handling delicate hydrogel contact lenses, especially those with a high water content.
Due to the material structure of silicone hydrogel contact lenses, less deposits accumulate on them compared to hydrogel contact lenses. This means more comfort and better quality of vision throughout the life of contact lenses, and for wearers who sometimes violate the rules of contact lens care (for example, sleeping in contact lenses that are not designed for this), even more safety.\n\tHypergels (new) are an innovative material of a new generation of materials that incorporate the best features of conventional hydrogels and silicone hydrogels.The main advantage of these lenses is the unique material of the latest generation HyperGel ™, which has all the advantages of hydrogel and silicone hydrogel materials without their disadvantages. The moisture content of the polymer is 78%, which corresponds to the moisture content of the cornea of a healthy eye. This phenomenal hydrophilicity ensures maximum hydration of the eyes and wearing comfort for at least 16 hours, even in the most adverse conditions.</string>
    <string name="info_wearing_mode">Wearing mode</string>
    <string name="info_wearing_mode_description">\tDaytime - lenses are worn only during the day, and removed at night\n\tFlexible - it is permissible to leave the lenses overnight, but not more than 2 consecutive nights;\n\tProlonged - use up to 6 consecutive days is possible. With prolonged wear, the lenses are not removed at night, but after 6 days they must be replaced with a new pair;\n\tContinuous - the lenses can be worn for up to a month without taking them off at night.</string>
    <string name="info_recommendations_description">\tDoctors recommend using daytime lenses. They are the safest with regular maintenance. Prolonged use of lenses can limit the access of oxygen to the eyes and provoke the development of pathological conditions.\n\tIn addition, pathogenic bacteria accumulate on the lenses, and this is fraught with complications for the eyes.</string>
    <string name="info_replacement_time">Replacement time</string>
    <string name="info_replacement_description">\tOne-day - every day the patient puts on a new pair, and in the evening he just throws out the lenses; \n\tBi-weekly - replacement occurs every two weeks; \n\tPeriod; \n\tThree-month; \n\tAnnual - nowadays they are used extremely rarely due to the higher risk of complications in comparison with planned replacement lenses.</string>
    <string name="info_recommendations_replacement_description">\tOphthalmologists advise to give preference to lenses of a more frequent replacement regime - one day or two weeks. They are safer for the eyes, since they do not have time to accumulate on their surface a large number of bacteria or lipid deposits, which can provoke severe conjunctivitis and keratitis.</string>
    <string name="info_contact_lens_types">Contact lens types</string>
    <string name="info_contact_lens_types_descriptions">\tTraditional - transparent soft contact lenses for correcting vision deviations using one optical power (sphere only).\n\tToric - transparent soft contact lenses for correcting complex vision deviations using two optical powers of the lens (sphere and cylinder).\n\tMultifocal - designed for patients with age-related farsightedness, implying additional correction for comfortable near vision. Multifocal contact lenses have several zones for clear vision: near, at the computer and far.\n\tColored - decorative lenses designed to change your usual eye color to any other. They are available both with diopters (up to -10) and for users with excellent vision, which does not require additional correction (00).</string>
    <string name="info_design_of_contact_lenses">Design of contact lenses</string>
    <string name="info_design_of_contact_lenses_description">\tSpherical – the most common. When choosing such lenses, you need to take into account that you will need lenses with lower diopters than glasses. The difference can be 0.5–2 diopters. For example, with a vision of -6, lenses with an index of -5 may be suitable for you. This difference can be determined by an ophthalmologist when choosing contact lenses.\n\tAspherical - Provides better image quality and improves clarity even at the edges of the field of view. Aspherical lenses are relatively new and quickly gain a foothold in the market. When buying, it should be borne in mind that, as a rule, diopter adjustment is not required here.</string>

    <string name="settings">Settings</string>
    <string name="General">General</string>
    <string name="theme_mode">Theme mode</string>
    <string name="other">Other</string>
    <string name="rate">Rate app</string>
    <string name="click_to_rate_app">Click to rate app</string>
    <string name="other_applications">Other applications</string>
    <string name="other_apps">Click to get more apps</string>
    <string name="splash_screen">Splash screen</string>
    <string name="turn_off">Turn off</string>
    <string name="turn_on">Turn on</string>
    <string name="content_description_add_note" tools:ignore="MissingTranslation">Add note</string>
    <string name="notes_with_parameters">Lens parameter notes</string>
    <string name="any_title">any title…</string>
    <string name="any_text">any text…</string>
    <string name="left_eye">Left eye</string>
    <string name="right_eye">Right eye</string>
    <string name="parameters">Parameters</string>
    <string name="for_astigmatism">For astigmatism</string>
    <string name="radius_of_curvature">Radius of curvature</string>
    <string name="cylinder_power">Cylinder power</string>
    <string name="axis">Axis</string>
    <string name="optical_power">Optical power</string>
    <string name="transition_name_fab" translatable="false">fab</string>
    <string name="info_optical_power">Optical power (sphere) refers to the power of your contact lens, which is written as a number with a "+" or "-" sign and one or two digits after the decimal point (for example: +2.5 or -4.25). The optical power of a contact lens is not the same parameter as for your glasses.
Please note that very often the optical power for your right eye (OD) may differ from the optical power for your left eye (OS), both in magnitude and in sign. If your eyes have different diopters for the right and left eyes, then you will need to purchase several packs of contact lenses.</string>
    <string name="info_radius_of_curvature">The radius of curvature (BC) refers to the radius of the curve on the inner surface of your contact lens. This is a number with one digit after the decimal point, usually 8.3 to 9.0. In most cases, this parameter is the same for both eyes.</string>
    <string name="info_astigmatism">If you wear bifocal or toric contact lenses to correct astigmatism, they will perform better.
\n\tCyl (cylinder): can have values from - 0.75 to - 2.25.
\n\tAX (Axis Angle): Can have values from 10 to 180 degrees.</string>
    <string name="click_to_read_privacy_policy">Click to read privacy policy</string>
    <string name="privacy_policy">Privacy policy</string>
</resources>
