<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar_info"
            layout="@layout/layout_toolbar_other" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextTitleInfo"
                    android:text="@string/info_contact_lens_types" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextTitleInfoDesc"
                    android:text="@string/info_contact_lens_types_descriptions" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextTitleInfo"
                    android:text="@string/info_design_of_contact_lenses" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextTitleInfoDesc"
                    android:text="@string/info_design_of_contact_lenses_description" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextTitleInfo"
                    android:text="@string/info_material" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextTitleInfoDesc"
                    android:text="@string/info_material_description" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextTitleInfo"
                    android:text="@string/info_wearing_mode" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextTitleInfoDesc"
                    android:text="@string/info_wearing_mode_description" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextTitleInfoDesc"
                    android:text="@string/info_recommendations_description" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextTitleInfo"
                    android:text="@string/info_replacement_time" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextTitleInfoDesc"
                    android:text="@string/info_replacement_description" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextTitleInfoDesc"
                    android:text="@string/info_recommendations_replacement_description" />


            </androidx.appcompat.widget.LinearLayoutCompat>
        </ScrollView>

    </LinearLayout>
</layout>